--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@
       <p>Get information about upcoming events, live plans regarding current and future missions.</p>
     </label>
   </section>
+  <section>
+    <img src="beast.jpg">
+    <h2>THE FORBIDDEN DARK BEASTS</h2>
+  </section>
 </body>
 </html>
